# harness-kit

./: .gitignore  CLAUDE.md  LICENSE  README.md  TROUBLESHOOTING.md  dev.sh
harness_usage_status/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
harness_usage_status/config/: .env.example  config.sample.yaml
harness_usage_status/docs/: project_understanding.md
harness_usage_status/plan/: todo.md
harness_usage_status/plan/01_project_scaffold/: README.md
harness_usage_status/plan/02_core_abstractions/: README.md
harness_usage_status/plan/03_config_system/: README.md
harness_usage_status/plan/04_provider_claude_code/: README.md
harness_usage_status/plan/05_provider_codex/: README.md
harness_usage_status/plan/06_provider_gemini/: README.md
harness_usage_status/plan/07_provider_minimax/: README.md
harness_usage_status/plan/08_provider_glm/: README.md
harness_usage_status/plan/09_provider_qwen/: README.md
harness_usage_status/plan/10_status_command/: README.md
harness_usage_status/plan/11_testing/: README.md
harness_usage_status/src/harness_usage_status/: cli.py  cli_runner.py  config.py  models.py
odin/: .env.example  CLAUDE.md  README.md  pyproject.toml
odin/config/: config.sample.yaml
odin/docs/: activity-and-comments.md  communication.md  execution.md  git-and-worktree.md  harness.md  mcp.md  philosophy.md  project_understanding.md  proof-of-work.md  sample_flow.md  specs_and_hierarchy.md  taskit-understanding.md  testing_mcp.md
odin/sample_specs/mobile/: 001-rename-home-title.md  workout_log.md  (+2 more)
odin/tests/: TEST_PLAN.md  conftest.py  testcase_readme.md
(+391 files in other folders)
