[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-usage-status"
version = "0.1.0"
description = "Centralized usage quota viewer for AI model providers"
requires-python = ">=3.9"
dependencies = [
    "fire>=0.5",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.scripts]
harness-usage-status = "harness_usage_status.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
